# mapgis2shp

./: .gitattributes  .gitignore  CITATION.cff  CLAUDE.md  LICENSE  MANIFEST.in  PYPI_UPLOAD.md  README.md  cross_validate.py  cross_validate_large_report.md  cross_validate_large_union.json  publish.sh  pymapgis_baseline.json  pyproject.toml  verify_pymapgis.py
docs/: MapGIS_Vector_Format.md  sld_export.md
paper/: cover_letter.md  paper.tex  paper_draft.md  paper_outline.md  references_formatted.md
paper/figures/: figure1_nature.py  figure2_nature.py  make_figures.py
paper/validation/: cross_validate_large_report.json  cross_validate_native.py  cross_validation_report.csv  cross_validation_report.md
src/pymapgis/: __init__.py  __main__.py  _version.py  cli.py  reader.py
tests/: conftest.py  test_cli.py  test_pure.py  test_reader.py
